--- a/intro_to_keras_and_tf.ipynb
+++ b/intro_to_keras_and_tf.ipynb
@@ -94,6 +94,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Simulation from last time\n",
+    "\n",
+    "w_1 = np.random.normal(0, 0.1, (X_train.shape[1], 4))\n",
+    "w_1.shape\n",
+    "\n",
+    "b_1 = 0\n",
+    "\n",
+    "z_1 = X_train.dot(w_1) + b_1\n",
+    "z_1\n",
+    "\n",
     "output = sigmoid(z_1)\n",
     "y_pred = output > .5\n",
     "y_hat = y_pred.astype(int)\n",
