fix weights shape

--- a/intro_to_keras_and_tf.ipynb
+++ b/intro_to_keras_and_tf.ipynb
@@ -63,6 +63,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "eight_by_eight_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(eight_by_eight_image);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digits.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_train, X_test, y_train, y_test = train_test_split(digits.data,\n",
     "                                                    digits.target,\n",
     "                                                    random_state=42,\n",
@@ -96,7 +123,7 @@
    "source": [
     "# Simulation from last time\n",
     "\n",
-    "w_1 = np.random.normal(0, 0.1, (X_train.shape[1], 4))\n",
+    "w_1 = np.random.normal(0, 0.1, (X_train.shape[1], 1))\n",
     "w_1.shape\n",
     "\n",
     "b_1 = 0\n",
