remove unnec imports

--- a/intro_to_keras_and_tf.ipynb
+++ b/intro_to_keras_and_tf.ipynb
@@ -443,11 +443,7 @@
    "outputs": [],
    "source": [
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from tensorflow.keras.regularizers import l2\n",
-    "from tensorflow.keras.optimizers import SGD\n",
-    "from tensorflow.keras.wrappers import scikit_learn\n",
-    "from tensorflow.keras.callbacks import EarlyStopping"
+    "from tensorflow.keras.layers import Dense"
    ]
   },
   {
