--- a/intro_to_keras_and_tf.ipynb
+++ b/intro_to_keras_and_tf.ipynb
@@ -557,6 +557,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appendix: More on Tensorflow Vs. Keras\n",
+    "\n",
+    "\n",
+    "### Let's start with tensors\n",
+    "\n",
+    "Tensors are multidimensional matrices.\n",
+    "\n",
+    "![tensor](img/tensors.png)\n",
+    "\n",
+    "### TensorFlow manages the flow of matrix math\n",
+    "\n",
+    "That makes neural network processing possible.\n",
+    "\n",
+    "![cat](img/cat-tensors.gif)\n",
+    "\n",
+    "For our numbers dataset, our tensors from the `sklearn` dataset were originally tensors of the shape 8x8, i.e. 64-bit pictures. Remember, that was with black and white images.\n",
+    "\n",
+    "For image processing, we are often dealing with color."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = load_sample_images()['images'][0]\n",
+    "\n",
+    "imgplot = plt.imshow(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What do the dimensions of our image above represent?\n",
+    "\n",
+    "Tensors with higher numbers of dimensions have a higher **rank**.\n",
+    "\n",
+    "A matrix with rows and columns only, like the black and white numbers, has **rank 2**.\n",
+    "\n",
+    "A matrix with a third dimension, like the color pictures above, has **rank 3**.\n",
+    "\n",
+    "When we flatten an image by stacking the rows in a column, we are decreasing the rank. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flat_image = image.reshape(-1, 1)\n",
+    "\n",
+    "flat_image.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "427*640*3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TensorFlow has more levers and buttons, but Keras is more user-friendly\n",
+    "\n",
+    "Coding directly in **Tensorflow** allows you to tweak more parameters to optimize performance. The **Keras** wrapper makes the code more accessible for developers prototyping models.\n",
+    "\n",
+    "![levers](img/levers.jpeg)\n",
+    "\n",
+    "### Keras, an API with an intentional UX\n",
+    "\n",
+    "- Deliberately design end-to-end user workflows\n",
+    "- Reduce cognitive load for your users\n",
+    "- Provide helpful feedback to your users\n",
+    "\n",
+    "[full article here](https://blog.keras.io/user-experience-design-for-apis.html)<br>\n",
+    "[full list of why to use Keras](https://keras.io/why-use-keras/)\n",
+    "\n",
+    "### A few comparisons\n",
+    "\n",
+    "While you **can leverage both**, here are a few comparisons.\n",
+    "\n",
+    "| Comparison | Keras | Tensorflow|\n",
+    "|------------|-------|-----------|\n",
+    "| **Level of API** | high-level API | High and low-level APIs |\n",
+    "| **Speed** |  can *seem* slower |  is a bit faster |\n",
+    "| **Language architecture** | simple architecture, more readable and concise | straight tensorflow is a bit more complex |\n",
+    "| **Debugging** | less frequent need to debug | difficult to debug |\n",
+    "| **Datasets** | usually used for small datasets | high performance models and large datasets that require fast execution|\n",
+    "\n",
+    "This is also a _**non-issue**_ - as you can leverage `tensorflow` commands within `keras` and vice versa. If Keras ever seems slower, it's because the developer's time is more expensive than the GPUs'. Keras is designed with the developer in mind. \n",
+    "\n",
+    "[reference link](https://www.edureka.co/blog/keras-vs-tensorflow-vs-pytorch/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
