Separate optimization and NN trainig sections

--- a/intro_to_keras_and_tf.ipynb
+++ b/intro_to_keras_and_tf.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction-to-keras-and-tensorflow\" data-toc-modified-id=\"Introduction-to-keras-and-tensorflow-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction to <code>keras</code> and <code>tensorflow</code></a></span></li><li><span><a href=\"#Objectives\" data-toc-modified-id=\"Objectives-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Objectives</a></span></li><li><span><a href=\"#How-Traning-Neural-Networks-Work\" data-toc-modified-id=\"How-Traning-Neural-Networks-Work-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>How Traning Neural Networks Work</a></span><ul class=\"toc-item\"><li><span><a href=\"#Back-propagation\" data-toc-modified-id=\"Back-propagation-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Back propagation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Function-Approximation\" data-toc-modified-id=\"Function-Approximation-3.1.1\"><span class=\"toc-item-num\">3.1.1&nbsp;&nbsp;</span>Function Approximation</a></span></li><li><span><a href=\"#Loss-Function\" data-toc-modified-id=\"Loss-Function-3.1.2\"><span class=\"toc-item-num\">3.1.2&nbsp;&nbsp;</span>Loss Function</a></span></li></ul></li><li><span><a href=\"#Gradient-Descent,-Epochs,-and-Batches\" data-toc-modified-id=\"Gradient-Descent,-Epochs,-and-Batches-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Gradient Descent, Epochs, and Batches</a></span><ul class=\"toc-item\"><li><span><a href=\"#Batch-Gradient-Descent\" data-toc-modified-id=\"Batch-Gradient-Descent-3.2.1\"><span class=\"toc-item-num\">3.2.1&nbsp;&nbsp;</span>Batch Gradient Descent</a></span></li><li><span><a href=\"#Stochastic-Gradient-Descent\" data-toc-modified-id=\"Stochastic-Gradient-Descent-3.2.2\"><span class=\"toc-item-num\">3.2.2&nbsp;&nbsp;</span>Stochastic Gradient Descent</a></span></li><li><span><a href=\"#Mini-Batch-Gradient-Descent\" data-toc-modified-id=\"Mini-Batch-Gradient-Descent-3.2.3\"><span class=\"toc-item-num\">3.2.3&nbsp;&nbsp;</span>Mini-Batch Gradient Descent</a></span></li></ul></li><li><span><a href=\"#Optimizers\" data-toc-modified-id=\"Optimizers-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Optimizers</a></span></li></ul></li><li><span><a href=\"#Tensorflow-and-Keras\" data-toc-modified-id=\"Tensorflow-and-Keras-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Tensorflow and Keras</a></span><ul class=\"toc-item\"><li><span><a href=\"#Keras-is-an-API\" data-toc-modified-id=\"Keras-is-an-API-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Keras is an API</a></span></li><li><span><a href=\"#Building-a-Binary-Classifier-NN\" data-toc-modified-id=\"Building-a-Binary-Classifier-NN-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Building a Binary Classifier NN</a></span><ul class=\"toc-item\"><li><span><a href=\"#Initialize-a-Linear-Stack-of-Layers\" data-toc-modified-id=\"Initialize-a-Linear-Stack-of-Layers-4.2.1\"><span class=\"toc-item-num\">4.2.1&nbsp;&nbsp;</span>Initialize a Linear Stack of Layers</a></span></li><li><span><a href=\"#Add-Densely-Connected-Layers\" data-toc-modified-id=\"Add-Densely-Connected-Layers-4.2.2\"><span class=\"toc-item-num\">4.2.2&nbsp;&nbsp;</span>Add Densely Connected Layers</a></span></li><li><span><a href=\"#Compile-the-Model\" data-toc-modified-id=\"Compile-the-Model-4.2.3\"><span class=\"toc-item-num\">4.2.3&nbsp;&nbsp;</span>Compile the Model</a></span></li><li><span><a href=\"#Fit-the-Model\" data-toc-modified-id=\"Fit-the-Model-4.2.4\"><span class=\"toc-item-num\">4.2.4&nbsp;&nbsp;</span>Fit the Model</a></span></li></ul></li><li><span><a href=\"#Appendix:-More-on-Tensorflow-Vs.-Keras\" data-toc-modified-id=\"Appendix:-More-on-Tensorflow-Vs.-Keras-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Appendix: More on Tensorflow Vs. Keras</a></span><ul class=\"toc-item\"><li><span><a href=\"#Let's-start-with-tensors\" data-toc-modified-id=\"Let's-start-with-tensors-4.3.1\"><span class=\"toc-item-num\">4.3.1&nbsp;&nbsp;</span>Let's start with tensors</a></span></li><li><span><a href=\"#TensorFlow-manages-the-flow-of-matrix-math\" data-toc-modified-id=\"TensorFlow-manages-the-flow-of-matrix-math-4.3.2\"><span class=\"toc-item-num\">4.3.2&nbsp;&nbsp;</span>TensorFlow manages the flow of matrix math</a></span></li></ul></li><li><span><a href=\"#TensorFlow-has-more-levers-and-buttons,-but-Keras-is-more-user-friendly\" data-toc-modified-id=\"TensorFlow-has-more-levers-and-buttons,-but-Keras-is-more-user-friendly-4.4\"><span class=\"toc-item-num\">4.4&nbsp;&nbsp;</span>TensorFlow has more levers and buttons, but Keras is more user-friendly</a></span><ul class=\"toc-item\"><li><span><a href=\"#Keras,-an-API-with-an-intentional-UX\" data-toc-modified-id=\"Keras,-an-API-with-an-intentional-UX-4.4.1\"><span class=\"toc-item-num\">4.4.1&nbsp;&nbsp;</span>Keras, an API with an intentional UX</a></span></li><li><span><a href=\"#A-few-comparisons\" data-toc-modified-id=\"A-few-comparisons-4.4.2\"><span class=\"toc-item-num\">4.4.2&nbsp;&nbsp;</span>A few comparisons</a></span></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction-to-keras-and-tensorflow\" data-toc-modified-id=\"Introduction-to-keras-and-tensorflow-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction to <code>keras</code> and <code>tensorflow</code></a></span></li><li><span><a href=\"#Objectives\" data-toc-modified-id=\"Objectives-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Objectives</a></span></li><li><span><a href=\"#How-Traning-Neural-Networks-Work\" data-toc-modified-id=\"How-Traning-Neural-Networks-Work-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>How Traning Neural Networks Work</a></span><ul class=\"toc-item\"><li><span><a href=\"#Forward-Propagation\" data-toc-modified-id=\"Forward-Propagation-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Forward Propagation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Forward-Propagation-Implemented-from-Scratch\" data-toc-modified-id=\"Forward-Propagation-Implemented-from-Scratch-3.1.1\"><span class=\"toc-item-num\">3.1.1&nbsp;&nbsp;</span>Forward Propagation Implemented from Scratch</a></span></li></ul></li><li><span><a href=\"#Backpropagation-(Backprop)\" data-toc-modified-id=\"Backpropagation-(Backprop)-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Backpropagation (Backprop)</a></span><ul class=\"toc-item\"><li><span><a href=\"#Function-Approximation\" data-toc-modified-id=\"Function-Approximation-3.2.1\"><span class=\"toc-item-num\">3.2.1&nbsp;&nbsp;</span>Function Approximation</a></span></li><li><span><a href=\"#Loss-Function\" data-toc-modified-id=\"Loss-Function-3.2.2\"><span class=\"toc-item-num\">3.2.2&nbsp;&nbsp;</span>Loss Function</a></span></li></ul></li><li><span><a href=\"#Adjusting-Weights-with-Gradient-Descent\" data-toc-modified-id=\"Adjusting-Weights-with-Gradient-Descent-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Adjusting Weights with Gradient Descent</a></span></li></ul></li><li><span><a href=\"#♫-Better,-Faster,-Stronger-♫\" data-toc-modified-id=\"♫-Better,-Faster,-Stronger-♫-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>♫ Better, Faster, Stronger ♫</a></span><ul class=\"toc-item\"><li><span><a href=\"#Gradient-Descent-Modifications\" data-toc-modified-id=\"Gradient-Descent-Modifications-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Gradient Descent Modifications</a></span><ul class=\"toc-item\"><li><span><a href=\"#Batch-Gradient-Descent\" data-toc-modified-id=\"Batch-Gradient-Descent-4.1.1\"><span class=\"toc-item-num\">4.1.1&nbsp;&nbsp;</span>Batch Gradient Descent</a></span></li><li><span><a href=\"#Stochastic-Gradient-Descent\" data-toc-modified-id=\"Stochastic-Gradient-Descent-4.1.2\"><span class=\"toc-item-num\">4.1.2&nbsp;&nbsp;</span>Stochastic Gradient Descent</a></span></li></ul></li><li><span><a href=\"#Batch--Size\" data-toc-modified-id=\"Batch--Size-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Batch  Size</a></span><ul class=\"toc-item\"><li><span><a href=\"#Mini-Batch-Gradient-Descent\" data-toc-modified-id=\"Mini-Batch-Gradient-Descent-4.2.1\"><span class=\"toc-item-num\">4.2.1&nbsp;&nbsp;</span>Mini-Batch Gradient Descent</a></span></li></ul></li><li><span><a href=\"#Optimizers\" data-toc-modified-id=\"Optimizers-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Optimizers</a></span></li></ul></li><li><span><a href=\"#Tensorflow-and-Keras\" data-toc-modified-id=\"Tensorflow-and-Keras-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Tensorflow and Keras</a></span><ul class=\"toc-item\"><li><span><a href=\"#Keras-is-an-API\" data-toc-modified-id=\"Keras-is-an-API-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Keras is an API</a></span></li><li><span><a href=\"#Building-a-Binary-Classifier-NN\" data-toc-modified-id=\"Building-a-Binary-Classifier-NN-5.2\"><span class=\"toc-item-num\">5.2&nbsp;&nbsp;</span>Building a Binary Classifier NN</a></span><ul class=\"toc-item\"><li><span><a href=\"#Initialize-a-Linear-Stack-of-Layers\" data-toc-modified-id=\"Initialize-a-Linear-Stack-of-Layers-5.2.1\"><span class=\"toc-item-num\">5.2.1&nbsp;&nbsp;</span>Initialize a Linear Stack of Layers</a></span></li><li><span><a href=\"#Add-Densely-Connected-Layers\" data-toc-modified-id=\"Add-Densely-Connected-Layers-5.2.2\"><span class=\"toc-item-num\">5.2.2&nbsp;&nbsp;</span>Add Densely Connected Layers</a></span></li><li><span><a href=\"#Compile-the-Model\" data-toc-modified-id=\"Compile-the-Model-5.2.3\"><span class=\"toc-item-num\">5.2.3&nbsp;&nbsp;</span>Compile the Model</a></span></li><li><span><a href=\"#Fit-the-Model\" data-toc-modified-id=\"Fit-the-Model-5.2.4\"><span class=\"toc-item-num\">5.2.4&nbsp;&nbsp;</span>Fit the Model</a></span></li></ul></li><li><span><a href=\"#Appendix:-More-on-Tensorflow-Vs.-Keras\" data-toc-modified-id=\"Appendix:-More-on-Tensorflow-Vs.-Keras-5.3\"><span class=\"toc-item-num\">5.3&nbsp;&nbsp;</span>Appendix: More on Tensorflow Vs. Keras</a></span><ul class=\"toc-item\"><li><span><a href=\"#Let's-start-with-tensors\" data-toc-modified-id=\"Let's-start-with-tensors-5.3.1\"><span class=\"toc-item-num\">5.3.1&nbsp;&nbsp;</span>Let's start with tensors</a></span></li><li><span><a href=\"#TensorFlow-manages-the-flow-of-matrix-math\" data-toc-modified-id=\"TensorFlow-manages-the-flow-of-matrix-math-5.3.2\"><span class=\"toc-item-num\">5.3.2&nbsp;&nbsp;</span>TensorFlow manages the flow of matrix math</a></span></li></ul></li><li><span><a href=\"#TensorFlow-has-more-levers-and-buttons,-but-Keras-is-more-user-friendly\" data-toc-modified-id=\"TensorFlow-has-more-levers-and-buttons,-but-Keras-is-more-user-friendly-5.4\"><span class=\"toc-item-num\">5.4&nbsp;&nbsp;</span>TensorFlow has more levers and buttons, but Keras is more user-friendly</a></span><ul class=\"toc-item\"><li><span><a href=\"#Keras,-an-API-with-an-intentional-UX\" data-toc-modified-id=\"Keras,-an-API-with-an-intentional-UX-5.4.1\"><span class=\"toc-item-num\">5.4.1&nbsp;&nbsp;</span>Keras, an API with an intentional UX</a></span></li><li><span><a href=\"#A-few-comparisons\" data-toc-modified-id=\"A-few-comparisons-5.4.2\"><span class=\"toc-item-num\">5.4.2&nbsp;&nbsp;</span>A few comparisons</a></span></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -82,7 +82,53 @@
     "hidden": true
    },
    "source": [
-    "Let's consider some images that we'll use as an example to refer to."
+    "![backprop](img/ff-bb.gif)\n",
+    "\n",
+    "The graphic above can be a bit frustrating since it moves fast, but follow the progress as so:\n",
+    "\n",
+    "Forward propagation with the **blue** tinted arrows computes the output of each layer: i.e. a summation and activation.\n",
+    "\n",
+    "Backprop calculates the partial derivative (**green** circles) for each weight (**brown** line) and bias."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "## Forward Propagation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "As we saw from last time, forward propagation. Is making a prediction with the neural network after the weights are \"frozen\" (unchanging). \n",
+    "\n",
+    "We feed in each data point through the neural network to make a prediction. This is usually relatively quick and the real magic comes in when we try to find ways to adjust our different weights to get a better prediction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "### Forward Propagation Implemented from Scratch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Let's consider some images that we'll use as an example."
    ]
   },
   {
@@ -171,8 +217,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
-    "scrolled": true
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -186,7 +231,18 @@
     "z_1 = X_train.dot(w_1) + b_1\n",
     "z_1\n",
     "\n",
-    "output = sigmoid(z_1)\n",
+    "output = sigmoid(z_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "y_pred = output > .5\n",
     "y_hat = y_pred.astype(int)\n",
     "y_hat[:5]"
@@ -199,7 +255,7 @@
     "hidden": true
    },
    "source": [
-    "## Back propagation"
+    "## Backpropagation (Backprop)"
    ]
   },
   {
@@ -401,8 +457,7 @@
     "hidden": true
    },
    "source": [
-    "Here is a good summary of different [loss functions]( https://ml-cheatsheet.readthedocs.io/en/latest/loss_functions.html):\n",
-    "   "
+    "Here is a good summary of different [loss functions]( https://ml-cheatsheet.readthedocs.io/en/latest/loss_functions.html) "
    ]
   },
   {
@@ -412,7 +467,7 @@
     "hidden": true
    },
    "source": [
-    "## Gradient Descent, Epochs, and Batches"
+    "## Adjusting Weights with Gradient Descent"
    ]
   },
   {
@@ -448,7 +503,16 @@
     "hidden": true
    },
    "source": [
-    "When we fit our neural nets in Keras, we can set the hyperparameter `verbose` equal to 1, and we will see progress through **epochs**. Setting `verbose` to 2 will show just the epoch numbers as they progress."
+    "When **all examples** from a training set have passed through the network and weights are adjusted with backpropagation, we say an ***epoch*** has been completed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# ♫ Better, Faster, Stronger ♫"
    ]
   },
   {
@@ -457,7 +521,28 @@
     "hidden": true
    },
    "source": [
-    "At the end of each epoch, **all examples** from are training set have passed through the network."
+    "We can optimize our model to run faster and better!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Sometimes this optimization feels like black magic over a science...\n",
+    "\n",
+    "![https://xkcd.com/1838/](https://imgs.xkcd.com/comics/machine_learning.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "## Gradient Descent Modifications"
    ]
   },
   {
@@ -525,6 +610,16 @@
     "hidden": true
    },
    "source": [
+    "## Batch  Size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
     "### Mini-Batch Gradient Descent"
    ]
   },
@@ -576,21 +671,6 @@
     "hidden": true
    },
    "source": [
-    "![backprop](img/ff-bb.gif)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "The graphic above can be a bit frustrating since it moves fast, but follow the progress as so:\n",
-    "\n",
-    "Forward propagation with the **blue** tinted arrows computes the output of each layer: i.e. a summation and activation.\n",
-    "\n",
-    "Backprop calculates the partial derivative (**green** circles) for each weight (**brown** line) and bias.\n",
-    "\n",
     "Then the optimizer multiplies a **learning rate** ($\\eta$) to each partial derivative to calculate a new weight which will be applied to the next batch that passes through."
    ]
   },
